--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Coinz</string>
     <string name="action_settings">Settings</string>
+    <string name="upslashdown">Current Vote Count is at: </string>
+    <string name="tallycount">0</string>
 </resources>
