--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="upslashdown">Current Vote Count is at: </string>
     <string name="tallycount">0</string>
+    <string name="randheading">"Here is a random number between 0 and number of upvotes: "</string>
 </resources>
