--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="upslashdown">Current Vote Count is at: </string>
     <string name="tallycount">0</string>
     <string name="randheading">"Here is a random number between 0 and number of upvotes: "</string>
+    <string name="title_activity_map_box_main">MapBoxMain</string>
+    <string name="access_token">pk.eyJ1IjoiYWJydWNlMjI1IiwiYSI6ImNqbm9qaHU2ejF3Z20za3M1Mnl6dmswZW4ifQ.BIie6wQThBY-WqnKMl7nrA</string>
 </resources>
