Profile set up and exchange rates being parsed. Layout sorted for activities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="email">Please enter your email address.</string>
     <string name="registerCap">Welcome to Coinz!</string>
 
+    <string name="userEmail"></string>
+    <string name="userGoldSum"></string>
+    <string name="netWorth">Current NET Worth: 0</string>
+    <string name="remember">Remember?</string>
+
 </resources>
