--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,6 @@
     </string>
     <string name="popupsettings">Toggle Information Popups On/Off</string>
     <string name="welcome_to_the_store_click_on_an_item_to_purchase_it_power_ups_last_until_the_end_of_the_current_day">Welcome to the store, click on an item to purchase it! Power-ups last until the end of the current day.</string>
+    <string name="activated">Activated</string>
 
 </resources>
